# vamos

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  fly.api.toml  fly.web.toml  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/vamos_api/: __init__.py  cli.py  main.py
apps/api/src/vamos_api/core/: config.py  deps.py  logging.py
apps/api/src/vamos_api/routes/: advisor.py  market.py  news.py  portfolio.py
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.ts
apps/web/app/: app.css  globals.css  landing.css  layout.tsx  page.tsx
apps/web/app/app/: page.tsx
apps/web/components/: BriefingPanel.tsx  Chat.tsx  ContextRail.tsx  HoldingsTable.tsx  LeftRail.tsx  Markdown.tsx  MarketHeader.tsx  PortfolioSelector.tsx  PortfolioSnapshot.tsx
apps/web/components/cards/: BriefingCard.tsx  CausalGraphCard.tsx  ForecastCard.tsx  HoldingsCard.tsx  NewsCard.tsx  (+10 more)
apps/web/lib/: api.ts  export.ts  format.ts  intent.ts  landing-data.ts  partialJson.ts  sse.ts  threads.ts
docs/: twelve-data.md
scripts/: dev.sh  setup.sh  smoke_chat_intents.py  smoke_decision_questions.py  smoke_focus_filter.py  smoke_live_data.py  smoke_routing_discipline.py
test (1)/: app.jsx  chat.jsx  common.jsx  data.jsx  screens-b.jsx
test (1)/uploads/: Backend Engineering Challenge_ Autonomous Financial Advisor Agent.docx
test (2)/: Autonomous Financial Advisor.html  Landing.html  cards.jsx  landing-app.jsx  landing-data.jsx  landing-hero.jsx  landing-sections.jsx  landing-tour.jsx  landing.css  rails.jsx  screens-a.jsx  styles.css
(+4 files in other folders)
