[project]
name = "vamos"
version = "0.1.0"
description = "Autonomous Financial Advisor Agent — monorepo root"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["apps/api", "packages/core", "packages/agents"]

[tool.uv.sources]
vamos-core = { workspace = true }
vamos-agents = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "packages/core/tests", "packages/agents/tests"]
asyncio_mode = "auto"
